[package]
name = "rustql-api"
version = "0.1.0"
authors = ["Dean <revell345@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.5.0", features=["full"]}
tungstenite = "0.13.0"
log = "0.4.14"
env_logger = "0.8.3"
futures = "0.3.14"
lazy_static = "1.4.0"
serde_json = "1.0.64"
mysql = "20.1.0"
serde = {version="1.0.125", features=["derive"]}
strum = "0.20.0"
strum_macros = "0.20.1"
rustql-types = { path = "../rustql-types", version = "0.1.0" }