[package]
name = "rustql-types"
version = "0.1.0"
authors = ["Dean Revell <revell345@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.125", features=["derive"]}
strum = "0.20.0"
strum_macros = "0.20.1"