[package]
name = "rustql-yew"
version = "0.1.0"
authors = ["Dean <revell345@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17.4"
anyhow = "1.0.40"
lazy_static = "1.4.0"
serde = {version="1.0.125", features=["derive"]}
serde_json = "1.0.64"
strum = "0.20.0"
strum_macros = "0.20.1"
rustql-types = {path="../rustql-types", version = "0.1.0"}